# CppUGBochum

./: CMakeLists.txt  Jenkinsfile  README.md  build.bat
doc/: 20180920_CppUGBochum_CI_Jenkins_CMake_GoogleTest.odp
src/: HelloWorld.cpp
src/UnitTests/: AdditionsTest.cpp  UnitTestsMain.cpp
workshop/001_HelloWorld/: CMakeLists.txt  HelloWorld.cpp  build.bash
workshop/002_HelloInstaller/: CMakeLists.txt
workshop/003_HelloGoogleTest/: CMakeLists.txt  Funktionen.cpp  Funktionen.hpp  FunktionenTest.cpp  build.bat
workshop/004_ExeLibDll/: CMakeLists.txt  addieren.cpp  addieren.hpp  build.bat  main.cpp  subtrahieren.cpp  subtrahieren.hpp
workshop/005_HelloWindows/: CMakeLists.txt  HelloMessagebox.cpp  HelloMessagebox.rc  build.bat
workshop/006_HelloMFC/: CMakeLists.txt  HelloMFC.cpp  HelloMFC.rc
workshop/007_MoreInstaller/: CMakeLists.txt  build.bash  build.bat  license.txt
